Closed Bug 1475351 Opened 6 years ago Closed 6 years ago

Crash with stylesheets in shadow dom

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: potch, Assigned: emilio)

References

()

Details

(Keywords: crash, Whiteboard: [tbird crash])

Crash Data

Attachments

(1 file)

Working on a demo, getting relatively consistent crashing while working with it. Crashes have occurred on page load and while running performance devtools.
Any crash reports or any more information here?
Flags: needinfo?(thepotch)
So far no luck reproducing.
And in crash-stats.mozilla.com I see very similar crashes on 52 Thunderbird.

Somehow we have null mSheet
No longer blocks: shadowdom-initial-release
Emilio is more familiar with stylesheet loading.
Flags: needinfo?(emilio)
I couldn't repro either... Any reliable str Potch?

SheetLoadData::mSheet is not supposed to be null...
Ah, I managed to repro with the inspector open.
Assignee: nobody → emilio
Attached patch PatchSplinter Review
Olli reviewed this over IRC while Bugzilla was down yesterday.
Flags: needinfo?(emilio)
Attachment #8992185 - Flags: review+
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1ea3747437b7
Properly clear associated ShadowRoot from StyleSheet objects. r=smaug
https://hg.mozilla.org/mozilla-central/rev/1ea3747437b7
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Severity: normal → critical
Keywords: crash
Whiteboard: [tbird crash]
Crash Signature: mozilla::StyleSheet::SetComplete → [@ mozilla::StyleSheet::SetComplete ]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: