Bug 1475351: Properly clear associated ShadowRoot from StyleSheet objects. r=smaug

Just like we do from the document's destructor.

MozReview-Commit-ID: DygmZ0EI9es